# 30daysofcode

./: CMakeLists.txt
Day-0 Hello-World/: Hello-world.cpp
Day-1 Datatypes/: Datatypes  Datatypes.cpp
Day-1 Hello-World/: Hello-world.cpp
Day-10 Binary Numbers/: binary.java  githubpush.sh
Day-10 Recursion/: Recursion.java
Day-11 2D-Array/: 2D-array.java  githubpush.sh
Day-11 Binary Numbers/: binary.java  githubpush.sh
Day-12 2D-Array/: 2D-array  2D-array.cpp  2D-array.java  githubpush.sh  reverse  reverse.cpp
Day-12 Inheritance/: Inheritance.java
Day-13 Abstract Classes/: abstractClasses.java  gitpush.sh
Day-13 Inheritance/: Inheritance.java  githubpush.sh  inheratance.java
Day-14 Scope/: scope.java
Day-15 LinkedList/: gitpush.sh  linkedList.cpp  linkedList.java  linkedList.js
Day-16 StringtoInt/: StringToInt.cpp
Day-17 More Exceptions/: MoreExceptions.cpp
Day-18 Stack and Queues/: Stack and Queue.cpp
Day-19 Interfaces/: Interface.java
Day-2 Operators/: operators.cpp
Day-20 Bubble-Sort/: Bubble-Sort.cpp  Bubble-Sort.java
Day-21 Generics/: Generics.cpp
Day-3 Conditional Statements/: conditional.cpp
Day-3 Operators/: operators  operators.cpp
Day-4 Class and Instance/: classVsInstance.java
Day-4 Conditional Statements/: conditional  conditional.cpp
Day-5 Class and Instance/: classVsInstance.cpp  classVsInstance.java
Day-5 Loops/: loops.java
Day-6 Loops/: loops.java
Day-6 Review/: review.java
Day-7 Arrays/: arrays.java
Day-7 Review/: review.java
Day-8 Arrays/: arrays.java
Day-8 Dictionaries/: Maps.java  githubpush.sh
(+9 files in other folders)
