cmake_minimum_required(VERSION 3.20)
project(30daysofcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(30daysofcode
        "Day-0 Hello-World/Hello-world.cpp"
        "Day-1 Datatypes/Datatypes.cpp"
        "Day-15 LinkedList/linkedList.cpp"
        "Day-2 Operators/operators.cpp"
        "Day-3 Conditional Statements/conditional.cpp")
